--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apexcharts": "^5.6.0",
     "axios": "^1.13.5",
+    "gsap": "^3.14.2",
     "json-server": "^1.0.0-beta.9",
     "next": "16.1.6",
     "react": "19.2.3",
