--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.13.5",
     "gsap": "^3.14.2",
     "json-server": "^1.0.0-beta.9",
+    "lucide": "^0.575.0",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-apexcharts": "^2.0.1",
