--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^1.0.0-beta.9",
     "lucide": "^0.575.0",
     "lucide-react": "^0.575.0",
+    "mongodb": "^7.1.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-apexcharts": "^2.0.1",
